Join channel feature done

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 API_ID=9468065
 API_HASH=658aa517e60ea5fed17eb99c9466279e
 BOT_TOKEN=7827255974:AAGQDYHg_Zp_Z0iykHqzgUDOa3dFaL0Dza0
+
+FORCE_SUB_CHANNEL_ID=-1003487567373
+FORCE_SUB_CHANNEL_USERNAME=@forcesubscribechannel1
+FORCE_SUB_CHANNEL_INVITE= https://t.me/+3nX5bYIisawxYzdl
